--- a/cloud/クラウド時代の常識「共有責任モデル」とは？オンプレとの違いから理解しよう.md
+++ b/cloud/クラウド時代の常識「共有責任モデル」とは？オンプレとの違いから理解しよう.md
@@ -1,3 +1,5 @@
+# クラウド時代の常識「共有責任モデル」とは？オンプレとの違いから理解しよう
+
 # はじめに
 
 「 **共有責任モデル（Shared Responsibility Model）**」という言葉を聞いたことがあっても、それが何を意味し、クラウドコンピューティングにどんな影響を与えるのか、正しく理解している人は意外と少ないかもしれません。
